css changes to images on cards so that they would no longer overflow from their containers. removed viewSwap function from createTopAnimeList and createTopMangaList and instead had those lists created on load after a short delay. changed event listener on Anime and Manga anchors to no longer create lists but to instead just utilize viewSwap function

--- a/css/layout.css
+++ b/css/layout.css
@@ -51,37 +51,41 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .top-manga-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 90%;
   margin-bottom: 2rem;
 }
 
-.card h3 {
+.card-header {
   align-self: flex-start;
   padding-left: 1rem;
 }
 
 .image-holder {
   display: flex;
-  align-items: center;
   justify-content: center;
-  object-position: 50% 50%;
+  align-items: center;
+  width: 90%;
 }
 
 .card-image {
-  padding-bottom: 0.5rem;
+  width: 90%;
+  height: auto;
+  object-fit: cover;
 }
 
 .card-title {
